--- a/sport-blog/group.html
+++ b/sport-blog/group.html
@@ -1,97 +1,134 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Спортивный блог</title>
+    <title>Тренировки с персональным тренером</title>
     <link href="style.css" rel="stylesheet" />
-    <script src="script.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <script src="jQuery.js"></script>
 </head>
 <body>
     <header class="header">
-        <div class="white-block">
-            <nav class="dws-menu">
-                <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
-                <label for="menu" class="toggleMenu">Меню</label>
-                <ul>
-                    <li>
-                        <a href="index.html">Главная</a>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
-                        <a href="#">Услуги</a>
-                        <label for="sub_m2" class="toggleSubmenu"></label>
-                        <ul>
-                            <li><a href="TRX.html">TRX - тренировки</a></li>
-                            <li><a href="men.html">Мужской тренинг</a></li>
-                            <li><a href="women.html">Тренировки для девушек</a></li>
-                            <li><a href="pt.home.html">Тренер на дом</a></li>
-                            <li><a href="lose_weight.html">Похудеть</a></li>
-                            <li><a href="group.html">Групповые тренировки</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="lose_weight.html">Похудеть</a>
-                    </li>
-                    <li>
-                        <a href="about_me.html">О себе</a>
-                    </li>
-                    <li>
-                        <a href="contacts.html">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="gray-block">
+                <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
-            <h4>FITNES BLOG & STORE</h4>
+            <h4>fitness trainer</h4>
         </div>
     </header>
-    <div id="content">
-        <div class="zal">
-            <img class="photo_gym_one" src="img/zal-photo.jpg" alt="персональный тренер Киев 0638587378">
-            <img class="photo_gym_two" src="img/zal-photo2.jpg" alt="персональный тренер Киев 0638587378">
-        </div>
-        <!-- TODO after before pseudo elements -->
-        <div class="kdb">
-            <div class="adres">
-                <p>Вы находитесь на сайте тренера. <br> Если Вы хотите привести свое тело в форму <br>- я готов помочь Вам начать и дойти до желаемого результата.
-                </p>
-                <p>Тренирую по адресу: <br>Фитнес-клуб inter Fit<br> Метро Лукьяновка<br> Адрес: Довнар-Запольского 9/10<br> График работы зала:<br> пн-пт с 7- 22<br> сб-вс с 9-21
-                </p>
-                <p>Стоимость разовой тренировки с тренером 400грн<br> Абонемент в зал оплачивается отдельно <br> Стоимость месячного абонемента составляет 599грн с 7 до 17:00 и 699грн на полный день <br> При первой тренировке возможно бесплатное разовое
-                    посещение зала по предварительному согласованию
-                </p>
-                <P>Телефон для записи:<br> tel: +38 063 858 73 78<br> Viber: +38 093 580 96 69<br>
-                </P>
+        <div id="content">
+        <div class="wrapper">
+            <div class="coach d-flex justify-content-around">
+                <!-- TODO after before pseudo elements -->
+                <div class="kdb">
+                    <h1>TRX групповые и персональные тренировки</h1>
+                    <div class="lozung"><h2>Тренируйтесь эффективно на природе или дома с персональным тренером</h2></div><br>
+                    <div class="coach-block">
+                        <img class="photo-coach" src="img/тродос.png" alt="персональный тренер Киев 0638587378">
+                        <div class="motivation">
+                            <br>
+                            <p><b>Спорт - это необходимый в современном мире метод сохранения молодости!</b></p><br> 
+                            <br>
+                            <p> Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
+                            чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую Вам начать заниматься спортом если Вы чувствуете вялость и апатию!</p><br>
+                        </div>
+                    </div>
+                    <div class="Coach-can">
+                        <h2>Что дают тренировки? Зачем вообще тренироваться?</h2><br>
+                        <ul class="DumbbellsIcon">
+                            <li>    Молодеет кожа</li>
+                            <li>    Появится гибкость</li>
+                            <li>    Уйдет лишний жир. Вы увидите в зеркале подтянутое, стройное, спортивное телосложение</li>
+                            <li>    Укрепятся мышцы. Появится сила и подвижность</li>
+                            <li>    Улучшается настроение. Появляется легкость и решительность</li>
+                        </ul>
+                        <p>
+                            Вы заставляете свое тело работать на повышенных режимах. Тренируете сердце. Ускоряется кровообращение. Улучшается снабжение клеток 
+                            всех тканей питательными веществами - макро (БЖУ) и микроэлементами (витамины, минералы) и кислородом. 
+                            Улучшается удаление продуктов распада и углекислого газа. Эти процессы касаются всех органов, поэтому, в результате тренировок 
+                            улучшается общее состояние здоровья.<br>
+                            Я называю фитнес "гигиеной тела". В этом нет героизма, но Ваши результаты увидят все!<br>
+                        </p>
+                    </div>
+
+                    <div class="Coach-can">
+                        <h2>Тренер может прийти к Вам и провести полноценную тренировку у Вас дома или на улице</h2><br>
+                        <p><b>
+                            При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</b></p><br>                
+                    </div>
+                    <div class="video-container">
+                            <embed width="1349" height="480" src="https://www.youtube.com/embed/-hlaWOW4PtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                    </div><br>                      
+                        <div class="Coach-can">
+                            <h2>Почему TRX?</h2><br>
+                            <ul class="DumbbellsIcon">
+                                <li>    Отсутствие нагрузки на позвоночник и суставы, разгрузка позвоночника</li>
+                                <li>    Работа с весом собственного тела</li>
+                                <li>    Подходит для всех уровней тренеированности, мгновенная регулировка величины нагрузки</li>
+                                <li>    Отсутствие зависимости от зала. Тренируйся где захочешь</li>
+                                <li>    Подходит для реабилитации ОДА</li>
+                                <li>    Полезно для развития подростков</li>
+                                <li>    Быстрое сжигание калорий</li>
+                            </ul>
+                            <div class="video-container">
+                                <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                            </div><br>                                            
+                            <p>
+                                Тренируясь с петлями TRX Вы поднимаете процент от веса собственного тела. Усилие, которое 
+                                приходится преодолевать всегда направлено вверх, навстречу гравитации, поэтому позвоночник и суставы разгружаются.
+                                Такие нагрузки полезны всем людям. А так же хорошо подходят для разработки и укрепления суставов при реабилитации после травм, а так же полезны для подростков, поскольку укрепляют мышцы, развивают тело и не препятствуют росту. 
+                                <br>
+                                Движения в TRX только базовые - многосуставные, энергоемкие, сопутствующие сжиганию большого количества калорий<br>
+                            </p>
+                        </div>
+                    <div class="story">
+                        <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
+                        <h3>О тренере:</h3> 
+                        <p> Меня зовут Аркадий. Мой спортивный путь длится уже приблизительно 30 лет, из которых 10 я работаю тренером.
+                                В подростковом возрасте я получил компрессионный перелом позвоночника. 
+                                Это событие положило начало пути реабилитации, в результате которого я восстановился, нашел профессию - тренер. И новое увлечение - силовой тренинг.
+                            </p>
+                    </div>
+                    <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы натренировках на улице или в домашних условиях.</b></p>
+
+               <br>
+               <h3>Расположение и стоимость:</h3><br>
+                        <p class="price">Стоимость персональной тренировки в парке "Наталка" 300грн/час/чел</p>
+                        <p class="price">Стоимость тренировки в мини группе, в парке "Наталка" 150грн/час/чел (от трех человек)</p>
+                        <p class="price">Стоимость онлайн тренировки 300грн/час</p>
+                        <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
+               <br>
+                <h3>Групповые тренировки проводятся здесь:</h3>
+
+                                <p>Оболонь. Парк "Наталка". Итти по аллее в сторону Днепра от первой клумбы, 
+                                   между рестораном "Желтые воды" и клиникой "Медиком", прямо, мимо детской площадки, в сторону фубольного поля.</p>
+                                <p>Регулярно, по вторникам и четвергам в 7:30</p>                
+
+                                   <img class="place-for-training" src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                    <img class="place-for-training" src="img/photo2.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                
+                    
+                        <!--
+                        <p> Пригород Киева 700грн/час/чел</p>
+                        -->
+                </div>
             </div>
         </div>
-        <form class="form">
-            <p><input type="text" name="name" class="feedback-input" placeholder="Имя"></p>
-            <p><input type="tel." name="tel." class="feedback-input" placeholder="Тел." id="tel."></p>
-            <p><textarea name="text" id="comment" placeholder="Сообщение" class="feedback-input" cols="93" rows="5"></textarea></p>
-            <input type="submit" value="Отправить" class="button-submit">
-            <div class="ease"></div>
-        </form>
     </div>
     <footer id="footer">
         <div class="black-block">
             <nav class="menu_footer">
-                <a href="index.html">Главная</a>
-                <a href="about_me.html">О себе</a>
-                <a href="contacts.html">Контакты</a>
+                <a ref="#index.html">Все</a>
+                <a ref="#about_me.html">мессенджеры</a>
+                <a ref="#contacts.html">по номеру:</a>
             </nav>
             <p class="number">+380638587378</p>
             <a href="tel:+380638587378">
                 <img class="tel" src="icons/button-telephone-icon.png" alt="+380638587378">
             </a>
             <div class="name">ARKADIY_GYM</div>
-        </div>
+        </div>        
     </footer>
 </body>
 </html>
